# vc-stereo-ros2

./: .pre-commit-config.yaml  CMakeLists.txt  DOCUMENTATION.md  LICENSE  README.md  package.xml  vc-stereo-ros2.repos
.github/workflows/: ci.yaml  install_deps.sh  pre-commit.yaml
config/calibrations/: README.md  left_intrinsic_params.yaml  left_stereo_params.yaml  right_intrinsic_params.yaml  right_stereo_params.yaml
config/calibrations/clyde/in_water/: left_stereo_params.yaml  right_stereo_params.yaml
include/argus_stereo_sync/: camera_publisher.h  constants.h  cuda_frame_acquire.h  gpio_trigger_thread.h  mutex_condition.h  stereo_consumer.h  trigger_thread.h  v4l_device.h
include/vc_argus_ros2/: camera_publisher.h  consumer_thread.h  convert.h  cuda_frame_acquire.h  gpio_trigger_thread.h  mutex_condition.h  v4l_device.h
include/vc_stereo_ros2/: camera_publisher.h  constants.h  consumer_thread.h  convert.h  cuda_frame_acquire.h  gpio_trigger_thread.h  mutex_condition.h  stereo_consumer.h  v4l_device.h
launch/: argus_stereo.launch.xml  stereo.launch.xml
src/: argus_node.cpp  consumer_thread.cpp  convert.cu  cuda_frame_acquire.cpp  gpio_trigger_thread.cpp  main.cpp  parameters.yaml  stereo_consumer.cpp  stereo_consumer_thread.cpp  stereo_node.cpp  v4l_device.cpp
