<?xml version="1.0"?>
<package format="2">
  <name>vc_stereo_ros2</name>
  <version>2.0.0</version>

  <description>ROS2 stereo camera software synchronization through libargus on Nvidia Jetson-powered systems</description>
  <maintainer email="amarburg@uw.edu">Aaron Marburg</maintainer>

  <author email="nkhera@andrew.cmu.edu">Neil Khera</author>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>sensor_msgs</depend>
  <depend>camera_info_manager</depend>

  <depend>generate_parameter_library</depend>
  <depend>image_transport</depend>

  <depend>rclcpp_components</depend>
  <depend>rclcpp</depend>

  <exec_depend>ros2launch</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
